@@ -21,9 +21,7 @@ import java.io.IOException;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Locale;
-import java.util.stream.Collectors;
 
-import static org.elasticsearch.cluster.metadata.DataStreamTestHelper.createTimestampField;
 import static org.elasticsearch.cluster.metadata.DataStreamTestHelper.generateMapping;
 import static org.hamcrest.Matchers.containsInAnyOrder;
 import static org.hamcrest.Matchers.containsString;
@@ -48,13 +46,7 @@ public class MetadataDataStreamsServiceTests extends MapperServiceTestCase {
             mb.put(backingIndices[k], false);
         }
 
-        mb.put(
-            DataStreamTestHelper.newInstance(
-                dataStreamName,
-                createTimestampField("@timestamp"),
-                Arrays.stream(backingIndices).map(IndexMetadata::getIndex).collect(Collectors.toList())
-            )
-        );
+        mb.put(DataStreamTestHelper.newInstance(dataStreamName, Arrays.stream(backingIndices).map(IndexMetadata::getIndex).toList()));
 
         final IndexMetadata indexToAdd = IndexMetadata.builder(randomAlphaOfLength(5))
             .settings(Settings.builder().put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT))
@@ -75,19 +67,11 @@ public class MetadataDataStreamsServiceTests extends MapperServiceTestCase {
         assertThat(ds, notNullValue());
         assertThat(ds.getType(), equalTo(IndexAbstraction.Type.DATA_STREAM));
         assertThat(ds.getIndices().size(), equalTo(numBackingIndices + 1));
-        List<String> backingIndexNames = ds.getIndices()
-            .stream()
-            .filter(x -> x.getName().startsWith(".ds-"))
-            .map(Index::getName)
-            .collect(Collectors.toList());
+        List<String> backingIndexNames = ds.getIndices().stream().filter(x -> x.getName().startsWith(".ds-")).map(Index::getName).toList();
         assertThat(
             backingIndexNames,
             containsInAnyOrder(
-                Arrays.stream(backingIndices)
-                    .map(IndexMetadata::getIndex)
-                    .map(Index::getName)
-                    .collect(Collectors.toList())
-                    .toArray(Strings.EMPTY_ARRAY)
+                Arrays.stream(backingIndices).map(IndexMetadata::getIndex).map(Index::getName).toList().toArray(Strings.EMPTY_ARRAY)
             )
         );
         IndexMetadata zeroIndex = newState.metadata().index(ds.getIndices().get(0));
@@ -112,13 +96,7 @@ public class MetadataDataStreamsServiceTests extends MapperServiceTestCase {
             mb.put(backingIndices[k], false);
         }
 
-        mb.put(
-            DataStreamTestHelper.newInstance(
-                dataStreamName,
-                createTimestampField("@timestamp"),
-                Arrays.stream(backingIndices).map(IndexMetadata::getIndex).collect(Collectors.toList())
-            )
-        );
+        mb.put(DataStreamTestHelper.newInstance(dataStreamName, Arrays.stream(backingIndices).map(IndexMetadata::getIndex).toList()));
 
         final IndexMetadata indexToRemove = backingIndices[randomIntBetween(0, numBackingIndices - 2)];
         ClusterState originalState = ClusterState.builder(new ClusterName("dummy")).metadata(mb.build()).build();
@@ -136,7 +114,7 @@ public class MetadataDataStreamsServiceTests extends MapperServiceTestCase {
         List<Index> expectedBackingIndices = ds.getIndices()
             .stream()
             .filter(x -> x.getName().equals(indexToRemove.getIndex().getName()) == false)
-            .collect(Collectors.toList());
+            .toList();
         assertThat(expectedBackingIndices, containsInAnyOrder(ds.getIndices().toArray()));
 
         IndexMetadata removedIndex = newState.metadata().getIndices().get(indexToRemove.getIndex().getName());
@@ -161,13 +139,7 @@ public class MetadataDataStreamsServiceTests extends MapperServiceTestCase {
             mb.put(backingIndices[k], false);
         }
 
-        mb.put(
-            DataStreamTestHelper.newInstance(
-                dataStreamName,
-                createTimestampField("@timestamp"),
-                Arrays.stream(backingIndices).map(IndexMetadata::getIndex).collect(Collectors.toList())
-            )
-        );
+        mb.put(DataStreamTestHelper.newInstance(dataStreamName, Arrays.stream(backingIndices).map(IndexMetadata::getIndex).toList()));
 
         final IndexMetadata indexToRemove = backingIndices[numBackingIndices - 1];
         ClusterState originalState = ClusterState.builder(new ClusterName("dummy")).metadata(mb.build()).build();
@@ -210,13 +182,7 @@ public class MetadataDataStreamsServiceTests extends MapperServiceTestCase {
             mb.put(backingIndices[k], false);
         }
 
-        mb.put(
-            DataStreamTestHelper.newInstance(
-                dataStreamName,
-                createTimestampField("@timestamp"),
-                Arrays.stream(backingIndices).map(IndexMetadata::getIndex).collect(Collectors.toList())
-            )
-        );
+        mb.put(DataStreamTestHelper.newInstance(dataStreamName, Arrays.stream(backingIndices).map(IndexMetadata::getIndex).toList()));
 
         final IndexMetadata indexToAdd = IndexMetadata.builder(randomAlphaOfLength(5))
             .settings(Settings.builder().put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT))
@@ -241,19 +207,11 @@ public class MetadataDataStreamsServiceTests extends MapperServiceTestCase {
         assertThat(ds, notNullValue());
         assertThat(ds.getType(), equalTo(IndexAbstraction.Type.DATA_STREAM));
         assertThat(ds.getIndices().size(), equalTo(numBackingIndices + 1));
-        List<String> backingIndexNames = ds.getIndices()
-            .stream()
-            .map(Index::getName)
-            .filter(name -> name.startsWith(".ds-"))
-            .collect(Collectors.toList());
+        List<String> backingIndexNames = ds.getIndices().stream().map(Index::getName).filter(name -> name.startsWith(".ds-")).toList();
         assertThat(
             backingIndexNames,
             containsInAnyOrder(
-                Arrays.stream(backingIndices)
-                    .map(IndexMetadata::getIndex)
-                    .map(Index::getName)
-                    .collect(Collectors.toList())
-                    .toArray(Strings.EMPTY_ARRAY)
+                Arrays.stream(backingIndices).map(IndexMetadata::getIndex).map(Index::getName).toList().toArray(Strings.EMPTY_ARRAY)
             )
         );
         IndexMetadata zeroIndex = newState.metadata().index(ds.getIndices().get(0));
@@ -278,13 +236,7 @@ public class MetadataDataStreamsServiceTests extends MapperServiceTestCase {
             mb.put(backingIndices[k], false);
         }
 
-        mb.put(
-            DataStreamTestHelper.newInstance(
-                dataStreamName,
-                createTimestampField("@timestamp"),
-                Arrays.stream(backingIndices).map(IndexMetadata::getIndex).collect(Collectors.toList())
-            )
-        );
+        mb.put(DataStreamTestHelper.newInstance(dataStreamName, Arrays.stream(backingIndices).map(IndexMetadata::getIndex).toList()));
 
         final IndexMetadata indexToAdd = IndexMetadata.builder(randomAlphaOfLength(5))
             .settings(Settings.builder().put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT))
@@ -315,19 +267,11 @@ public class MetadataDataStreamsServiceTests extends MapperServiceTestCase {
         assertThat(ds, notNullValue());
         assertThat(ds.getType(), equalTo(IndexAbstraction.Type.DATA_STREAM));
         assertThat(ds.getIndices().size(), equalTo(numBackingIndices + 1));
-        List<String> backingIndexNames = ds.getIndices()
-            .stream()
-            .map(Index::getName)
-            .filter(x -> x.startsWith(".ds-"))
-            .collect(Collectors.toList());
+        List<String> backingIndexNames = ds.getIndices().stream().map(Index::getName).filter(x -> x.startsWith(".ds-")).toList();
         assertThat(
             backingIndexNames,
             containsInAnyOrder(
-                Arrays.stream(backingIndices)
-                    .map(IndexMetadata::getIndex)
-                    .map(Index::getName)
-                    .collect(Collectors.toList())
-                    .toArray(Strings.EMPTY_ARRAY)
+                Arrays.stream(backingIndices).map(IndexMetadata::getIndex).map(Index::getName).toList().toArray(Strings.EMPTY_ARRAY)
             )
         );
         IndexMetadata zeroIndex = newState.metadata().index(ds.getIndices().get(0));
@@ -377,13 +321,7 @@ public class MetadataDataStreamsServiceTests extends MapperServiceTestCase {
             mb.put(backingIndices[k], false);
         }
 
-        mb.put(
-            DataStreamTestHelper.newInstance(
-                dataStreamName,
-                createTimestampField("@timestamp"),
-                Arrays.stream(backingIndices).map(IndexMetadata::getIndex).collect(Collectors.toList())
-            )
-        );
+        mb.put(DataStreamTestHelper.newInstance(dataStreamName, Arrays.stream(backingIndices).map(IndexMetadata::getIndex).toList()));
 
         final String missingIndex = randomAlphaOfLength(5);
         ClusterState originalState = ClusterState.builder(new ClusterName("dummy")).metadata(mb.build()).build();
